--- a/python_notebook_intro_student.ipynb
+++ b/python_notebook_intro_student.ipynb
@@ -43,9 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "3.141592653589793\n",
+      "3.141592653589793\n",
+      "3.141592653589793\n"
+     ]
+    }
+   ],
    "source": [
     "#This will import the *entire* scipy library. This can be inefficient because it will load in all of scipy's available \n",
     "#functions and modules.\n",
@@ -99,11 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.718281828459045\n"
+     ]
+    }
+   ],
    "source": [
-    "####Write code here:\n"
+    "####Write code here:\n",
+    "import numpy as np\n",
+    "import astropy\n",
+    "import matplotlib.pyplot as plt\n",
+    "print(np.e)"
    ]
   },
   {
@@ -129,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "x = 2\n",
     "y = 5\n",
@@ -180,12 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.1887902047863905\n",
+      "523.5987755982989\n",
+      "4188.790204786391\n"
+     ]
+    }
+   ],
    "source": [
     "####Write code here\n",
-    "\n"
+    "def sphereVolume(R):\n",
+    "    return ( (4/3) * np.pi * R*R*R )\n",
+    "\n",
+    "print( sphereVolume(1)  )\n",
+    "print( sphereVolume(5)  )\n",
+    "print( sphereVolume(10) )"
    ]
   },
   {
@@ -200,9 +246,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num =  2  and sum_value =  2\n",
+      "num =  5  and sum_value =  7\n",
+      "num =  3  and sum_value =  10\n",
+      "final value returned by function is my_sum =  10\n"
+     ]
+    }
+   ],
    "source": [
     "def sum_multiple(*numbers):\n",
     "    #this initializes the variable to zero\n",
@@ -218,7 +275,7 @@
     "\n",
     "a = 2\n",
     "b = 5\n",
-    "c=  3\n",
+    "c =  3\n",
     "my_sum = sum_multiple(a, b, c)\n",
     "print('final value returned by function is my_sum = ', my_sum)"
    ]
@@ -235,9 +292,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a b c\n",
+      "a, b, c\n"
+     ]
+    }
+   ],
    "source": [
     "print('a', 'b', 'c')\n",
     "print('a', 'b', 'c', sep = ', ')"
@@ -256,32 +322,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.26\n"
+     ]
+    }
+   ],
    "source": [
     "####Write code here\n",
-    "#function 1"
+    "#function 1\n",
+    "def multiply(a,b,c):\n",
+    "    return (a*b*c)\n",
+    "\n",
+    "print( multiply(1.0,2.2,3.3) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31.944000000000003\n"
+     ]
+    }
+   ],
    "source": [
     "####Write code here\n",
-    "#function 2"
+    "#function 2\n",
+    "def multiply(*numbers):\n",
+    "    product=1\n",
+    "    for num in numbers:\n",
+    "        product*=num\n",
+    "    return(product)\n",
+    "\n",
+    "print( multiply(1.0, 2.2, 3.3, 4.4) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0: 2.2: 3.3\n",
+      "7.26\n"
+     ]
+    }
+   ],
    "source": [
     "####Write code here\n",
-    "#function 3"
+    "#function 3\n",
+    "def multiply(a,b,c):\n",
+    "    print( a, b, c, sep = ': ')\n",
+    "    return(a*b*c)\n",
+    "\n",
+    "print( multiply(1.0,2.2,3.3) )"
    ]
   },
   {
@@ -321,13 +428,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st element:  4\n",
+      "3rd element:  7\n",
+      "---\n",
+      "last item:  15\n",
+      "last item:  15\n",
+      "---\n",
+      "5th element (before):  5\n",
+      "5th element (after):  0\n"
+     ]
+    }
+   ],
    "source": [
     "my_array = np.array([4, 2, 7, 1, 5, 1, 9, 6, 8, 3, 13, 7, 4, 15]) #14 values\n",
     "\n",
-    "####write code here\n"
+    "####write code here\n",
+    "print('1st element: ', my_array[0])\n",
+    "print('3rd element: ', my_array[2])\n",
+    "print('---')\n",
+    "print('last item: ', my_array[13])\n",
+    "print('last item: ', my_array[-1])\n",
+    "print('---')\n",
+    "print('5th element (before): ', my_array[4])\n",
+    "my_array[4] = 0\n",
+    "print('5th element (after): ', my_array[4])\n"
    ]
   },
   {
@@ -343,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,12 +490,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 20, 25, 30]\n"
+     ]
+    }
+   ],
    "source": [
     "nums_subset1 = nums[2:6:1] #Start: Index = 2, Stop: Index = 6, Step: 1\n",
-    "print(nums_subset)"
+    "print(nums_subset1)"
    ]
   },
   {
@@ -376,9 +515,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 20, 35, 50]\n"
+     ]
+    }
+   ],
    "source": [
     "nums_subset2 = nums[0:-1:3] #Start: Index = 0, Stop: Index = -1 (last element), Step: 3\n",
     "print(nums_subset2)"
@@ -393,9 +540,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 20, 25, 30]\n",
+      "[5, 20, 35, 50]\n"
+     ]
+    }
+   ],
    "source": [
     "#outputs all elements between the 3rd and 7th element\n",
     "nums_subset1 = nums[2:6] \n",
@@ -420,13 +576,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. [70, 80, 90]\n",
+      "2. [20, 30, 40, 50, 60]\n",
+      "3. [0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "nums_test = [10, 20, 30, 40, 50, 60, 70, 80, 90]\n",
     "\n",
-    "####Write code here\n"
+    "####Write code here\n",
+    "print('1.', nums_test[6::])\n",
+    "print('2.', nums_test[1:6])\n",
+    "\n",
+    "nums_test[1] = 0\n",
+    "nums_test[2] = 0\n",
+    "nums_test[3] = 0\n",
+    "nums_test[4] = 0\n",
+    "nums_test[5] = 0\n",
+    "\n",
+    "print('3.', nums_test[1:6])\n"
    ]
   },
   {
@@ -440,9 +616,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11. 22. 33. 44.]\n",
+      "[ 5. 12. 21. 32.]\n"
+     ]
+    }
+   ],
    "source": [
     "#make two arrays\n",
     "a_arr = np.array([1.,2.,3.,4.])\n",
@@ -479,13 +664,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 13.2  52.8 118.8 211.2]\n"
+     ]
+    }
+   ],
    "source": [
     "aa_arr = np.array([2., 4., 6., 8.])\n",
     "\n",
-    "####Write code here\n"
+    "####Write code here\n",
+    "bb_arr = aa_arr * 3.3\n",
+    "cc_arr = bb_arr * aa_arr\n",
+    "print(cc_arr)\n"
    ]
   },
   {
@@ -499,9 +695,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "[[1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1.]] \n",
+      "\n",
+      "[1. 2. 3. 4.] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 2. 3. 4.]\n",
+      " [0. 0. 0. 0.]] \n",
+      "\n",
+      "3.0 \n",
+      "\n",
+      "[0. 3. 0.] \n",
+      "\n",
+      "[[0. 0. 0. 0.]\n",
+      " [1. 2. 3. 4.]\n",
+      " [5. 6. 7. 8.]] \n",
+      "\n",
+      "[[1. 2. 3. 4.]\n",
+      " [5. 6. 7. 8.]] \n",
+      "\n",
+      "[[1. 2. 3. 4.]\n",
+      " [5. 6. 7. 8.]] \n",
+      "\n",
+      "[[0. 0.]\n",
+      " [3. 4.]\n",
+      " [7. 8.]]\n"
+     ]
+    }
+   ],
    "source": [
     "#This makes an array with 3 rows and 4 columns using the \"zeros\" command, which fills the array with zeros.\n",
     "#This is a useful way to initialize an array\n",
@@ -558,12 +792,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 1.  2.  3.  4.  5.  6.  7.]\n",
+      " [ 8.  9. 10. 11. 12. 13. 14.]] \n",
+      "\n",
+      "9.0 \n",
+      "\n",
+      "[[ 1.  2.  3.  4.  5.  6.  7.]\n",
+      " [ 8.  9. 10. 11. 12. 13. 14.]] \n",
+      "\n",
+      "[[ 0.  0.  0.]\n",
+      " [ 0.  0.  0.]\n",
+      " [ 5.  6.  7.]\n",
+      " [12. 13. 14.]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "####Write code here\n",
-    "\n"
+    "arr = np.zeros([4,7])\n",
+    "arr[2,:] = np.array([1,2,3,4,5,6,7])\n",
+    "arr[3,:] = np.array([8,9,10,11,12,13,14])\n",
+    "print(arr, '\\n')\n",
+    "print(arr[3,1], '\\n')\n",
+    "print(arr[2:,:], '\\n')\n",
+    "print(arr[:,4:], '\\n')\n"
    ]
   }
  ],
